--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "seu-projeto",
-  "version": "1.0.0",
-  "description": "Descrição do seu projeto",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "firebase-admin": "^11.10.1",
-    "socket.io": "^4.7.1"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "Seu nome",
-  "license": "Licença do seu projeto (por exemplo, MIT, ISC, etc.)"
+    "name": "Marlos Cardoso | Moda Masculia",
+    "version": "1.0.0",
+    "description": "Loja Virtual Marlos Cardoso",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "keywords": [
+        "ternos",
+        "gravatas",
+        "camisas"
+    ],
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "firebase-admin": "^11.10.1",
+        "socket.io": "^4.7.1"
+    }
 }
