--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Marlos Cardoso",
+    "name": "marlos-cardoso",
     "version": "1.0.0",
     "description": "Loja Virtual Marlos Cardoso",
     "main": "server.js",
